[gd_scene load_steps=7 format=3 uid="uid://co1lrggmahd1n"]

[ext_resource type="Script" path="res://player/player.gd" id="1_fqci0"]
[ext_resource type="Script" path="res://player/hurtbox.gd" id="2_t84xo"]
[ext_resource type="AudioStream" uid="uid://dxiikrgog8io0" path="res://sounds/shoot.wav" id="3_4jngo"]
[ext_resource type="AudioStream" uid="uid://bbk0aauhms56u" path="res://sounds/player_hurt.ogg" id="3_id3xr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rmbo4"]
size = Vector2(64, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ag2up"]
size = Vector2(112, 108)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_fqci0")
hp = 50
move_speed = 500

[node name="Hurtbox" type="Area2D" parent="." node_paths=PackedStringArray("parent") groups=["player"]]
script = ExtResource("2_t84xo")
parent = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("RectangleShape2D_rmbo4")

[node name="Sprite" type="ColorRect" parent="."]
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
pivot_offset = Vector2(32, 32)

[node name="Sprite2" type="ColorRect" parent="."]
offset_left = -28.0
offset_top = -27.0
offset_right = 28.0
offset_bottom = 27.0
pivot_offset = Vector2(28, 27)
color = Color(0.0862745, 0.0862745, 0.0862745, 1)

[node name="Sprite3" type="ColorRect" parent="."]
offset_left = -24.0
offset_top = -22.0
offset_right = 24.0
offset_bottom = 23.0
pivot_offset = Vector2(24, 22)

[node name="Sprite4" type="ColorRect" parent="."]
offset_left = -7.0
offset_top = -7.0
offset_right = 7.0
offset_bottom = 8.0
pivot_offset = Vector2(7, 7)
color = Color(0.0410109, 9.62615e-08, 0.308325, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_ag2up")

[node name="ShootingPoint" type="Marker2D" parent="."]
position = Vector2(0, -53)

[node name="ShootingTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="InvincibilityTimer" type="Timer" parent="."]
one_shot = true

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_4jngo")

[node name="HurtSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_id3xr")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HealthLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 150
text = "HP:  50"
vertical_alignment = 2
